--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Adopt Me!</title>
-    
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     <div id="root">not Rendered</div>
@@ -13,7 +14,19 @@
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js
     "></script>
     <script>
-        // some code will GO hear, for now
+      const App = () => {
+          return React.createElement(
+
+              "div",
+              {},
+              React.createElement("h1", {}, "Adopt Me!")
+          );
+      };
+
+      ReactDom.render(
+          React.createElement(App),
+          document.getElementById("root")
+      );
     </script>
 </body>
 </html>
