--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
@@ -7,26 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
     <div id="root">not Rendered</div>
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js
     "></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js
     "></script>
-    <script>
-      const App = () => {
-          return React.createElement(
-
-              "div",
-              {},
-              React.createElement("h1", {}, "Adopt Me!")
-          );
-      };
-
-      ReactDom.render(
-          React.createElement(App),
-          document.getElementById("root")
-      );
-    </script>
+    <script src="./App.js"></script>
 </body>
+
 </html>
